k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  labels:
    app: goapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp
        image: mustafamnr/goapp:latest
        ports:
        - containerPort: 8081
