k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
